# LIBERO

./: .gitignore  install_models.sh  requirements_models.txt
libero/rdt/: rdt_model.py  rdt_runner.py
libero/rdt/rdt/: blocks.py  model.py
models/: pyproject.toml  setup.py
models/mdt/: get_mdt_model.py  training_edm.py
models/mdt/datasets/: clear_dataset.py  hulc_da_data_module.py
models/mdt/datasets/preprocess/: extract_by_key_any.py
models/mdt/models/: edm_dp_agent.py  edm_dp_da.py  mdt_da.py
models/mdt/models/domain_adapt/: wgan.py
models/mdt/models/edm_diffusion/: score_wrappers.py
models/mdt/models/networks/: mdt_transformer.py
models/mdt/models/networks/transformers/: transformer_blocks.py
models/mdt/utils/: transforms.py
scripts/: convert_to_calvin_format.py  debug_ds.py  debug_ds2.py  evaluate_mdt.py  evaluate_rdt.py
